# OMNNSimulator

./: README.md  aeff_vs_wv.py  compare_eff_areas.py  convert_hdf5.py  eff_area_submit.py  geant_eff_area.py  setup.py
OMClassifier/: convert_hdf5.py  eff_area.py  lrfind.py  main.py  torch_trazing_model.py
OMClassifier/OMSimC++Test/: CMakeLists.txt  OMNNSim.pt  main.cpp
OMClassifier/src/omsimulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
OMClassifier/src/omsimulator/data/: dataloader.py  test_dataloader.py
OMClassifier/src/omsimulator/measurement_values/: lom_QE_NNVT.txt  lom_QE_hamamatsu.txt
OMClassifier/src/omsimulator/model/: model.py  model_torch.py
